--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
 
   "scripts": {
 
-   
+    "predeploy": "npm run build",
+
+    "deploy": "gh-pages -d build",
 
     "start": "react-scripts start",
 
